<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.product.ProductFragment">

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_back_arrow"
        android:background="?attr/selectableItemBackgroundBorderless" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivImage"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_no_image"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintVertical_chainStyle="packed"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

    <RelativeLayout
        android:id="@+id/relative_productname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_below="@+id/ivImage"
        android:layout_marginTop="10dp"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="70dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tvProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="26sp"
                android:textColor="@color/black"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_unitprice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_productname"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="70dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_price"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tvUnitPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="26sp"
                android:textColor="@color/black"/>

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_below="@+id/relative_unitprice"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/underline"/>

    <View
        android:layout_below="@+id/relative_productname"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/underline"/>

    <RelativeLayout
        android:id="@+id/relative_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:layout_below="@id/relative_unitprice"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="70dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/tvStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="26sp"
                android:textColor="@color/black"/>

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btAddCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_stock"
        android:backgroundTint="@color/dark_red"
        android:layout_margin="30dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/add_cart"/>
</RelativeLayout>

</layout>